# guMCP-self-hosted

./: CONTRIBUTING.MD  makefile  pyproject.toml
scripts/: compile_server_registry.py  format.py  generate_package_init.py  lint.py
src/gumcp/: __init__.py
src/gumcp/servers/ahrefs/: main.py
src/gumcp/servers/airtable/: main.py
src/gumcp/servers/apify/: main.py
src/gumcp/servers/apollo/: main.py
src/gumcp/servers/attio/: main.py
src/gumcp/servers/bluesky/: main.py
src/gumcp/servers/browserbase/: main.py
src/gumcp/servers/cal/: main.py
src/gumcp/servers/calendly/: main.py
src/gumcp/servers/canva/: main.py
src/gumcp/servers/clickup/: main.py
src/gumcp/servers/discourse/: main.py
src/gumcp/servers/docusign/: main.py
src/gumcp/servers/dropbox/: main.py
src/gumcp/servers/excel/: main.py
src/gumcp/servers/figma/: main.py
src/gumcp/servers/firecrawl/: main.py
src/gumcp/servers/gcalendar/: main.py
src/gumcp/servers/gdocs/: main.py
src/gumcp/servers/gdrive/: main.py
src/gumcp/servers/github/: main.py
src/gumcp/servers/gmail/: main.py
src/gumcp/servers/gmaps/: main.py
src/gumcp/servers/gmeet/: main.py
src/gumcp/servers/gsheets/: main.py
src/gumcp/servers/hackernews/: main.py
src/gumcp/servers/hubspot/: main.py
src/gumcp/servers/hunter_io/: main.py
src/gumcp/servers/instacart/: main.py
src/gumcp/servers/intercom/: main.py
src/gumcp/servers/jira/: main.py
src/gumcp/servers/klaviyo/: main.py
src/gumcp/servers/lemlist/: main.py
src/static/: server_list.json
tests/clients/: LocalMCPTestClient.py
(+76 files in other folders)
